@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-07T00:59:43Z",
-  "count_outdated" : 0,
-  "uniques_outdated" : 0,
+  "timestamp" : "2022-10-20T00:45:08Z",
+  "count_outdated" : 23,
+  "uniques_outdated" : 2,
   "count" : 31,
   "uniques" : 3,
   "views" : [
-    {
-      "timestamp": "2022-10-05T00:00:00Z",
-      "count": 23,
-      "count_minmax": [ 23, 23 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-10-06T00:00:00Z",
       "count": 8,
