@@ -1,12 +1,7 @@
 {
-  "count": 31,
-  "uniques": 2,
+  "count": 8,
+  "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-10-05T00:00:00Z",
-      "count": 23,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-10-06T00:00:00Z",
       "count": 8,
